2006-04-27  Phil Blundell  <pb@reciva.com>

	* Version 0.53 released.

2006-04-20  Florian Boor <florian.boor@kernelconcepts.de>

	* Apply patch by Alberto Garcia Hierro and Marek Chlup to fix
          installation of the resume script.

2006-02-06  Phil Blundell  <pb@reciva.com>

	* Version 0.52 released.

2006-02-06  Phil Blundell  <pb@reciva.com>

	* main.c (main): Also select for GDK_BUTTON_RELEASE_MASK on panel
	window.  Disable "Remove from panel" menu item for now.
	
2006-02-06  Phil Blundell  <pb@reciva.com>

	* main.c (radio_starting, radio_start_callbacks, radio_use_count):
	New globals.
	(check_radio_startup): Run callbacks if any.  Note that the radio
	is not starting.
	(radio_on): Rename to do_start_radio.  Return TRUE for success,
	FALSE for failure.  Set radio_is_starting.
	(do_stop_radio): Clear radio_is_starting.  Update icon and menu.
	(radio_on, radio_on_then): New functions.
	(radio_off_menu, radio_on_menu): Likewise.
	(main): Use them.
	* obexclient.c (run_callback): Call radio_off().	
	(choose_destination_wrapper): New function.
	(obex_object_push): Use it.
	(send_my_vcard_wrapper): New function.
	(obex_popup_menu): Use it.

2006-02-05  Phil Blundell  <pb@reciva.com>

	* Version 0.51 released.

2006-02-05  Phil Blundell  <pb@reciva.com>

	* main.c (sdp_session): New global.
	(main): Create a global SDP session.
	* main.h (sdp_session): Declare.
	* obexserver.c (add_opush): Don't set PERSIST flag on SDP record.
	(add_service): Use above-mentioned global SDP session.

2006-02-05  Phil Blundell  <pb@reciva.com>

	* main.c (check_radio_startup): Correct ghastly mistake with
	return value from GSource.

2006-02-05  Phil Blundell  <pb@reciva.com>

	* Version 0.50 released.

2006-02-05  Phil Blundell  <pb@reciva.com>

	* obexclient.c (obex_service_desc): New global.
	(find_obex_service): Use it.
	(obex_do_connect): Avoid inappropriate use of perror().
	(obex_scan, send_vcard_done, really_send_my_vcard, send_my_vcard,